better sandbox.html visual effects

--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -41,12 +41,17 @@
 
     <h3>Events</h3>
     <div class="row">
-      <div class="col-lg-2 boxed" id="enabled">enabled</div>
-      <div class="col-lg-2 boxed" id="disabled">disabled</div>
-      <div class="col-lg-2 boxed" id="keyup">keyup</div>
-      <div class="col-lg-2 boxed" id="progress">progress</div>
-      <div class="col-lg-2 boxed" id="fail">fail</div>
-      <div class="col-lg-2 boxed" id="success">success</div>
+      <div class="col-lg-2">
+        <div class="boxed" id="progress">progress</div>
+      </div>
+      
+      <div class="col-lg-2">
+        <div class="boxed" id="success">success</div>
+      </div>
+
+      <div class="col-lg-1">
+        <div class="boxed" id="fail">fail</div>
+      </div>
     </div>
 
   </div>
