better comented code

--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -20,7 +20,7 @@
   <div class="container">
   <h1>Typing Skill Training :: Sandbox</h1>
 
-    <h3>press keys below</h3>
+    <h3>press keys below:</h3>
     <div class="row">
       <div class="col-lg-12">
         <div class="key-box-container unicode">
@@ -39,27 +39,28 @@
       </div>
     </div>
 
-    <h3>Events</h3>
+    <h3>event log:</h3>
     <div class="row">
       <div class="col-lg-2">
+        progress:
         <div class="boxed" id="progress">progress</div>
       </div>
       
       <div class="col-lg-2">
-        <div class="boxed" id="success">success</div>
+        success:
+        <div class="boxed" id="success"></div>
       </div>
 
       <div class="col-lg-1">
-        <div class="boxed" id="fail">fail</div>
+        fail:
+        <div class="boxed" id="fail"></div>
       </div>
     </div>
 
   </div>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script type="text/javascript" src="../bower_components/jquery/jquery.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="bootstrap-3.0.1/js/bootstrap.js"></script>
+  <script type="text/javascript" src="bootstrap-3.0.1/js/bootstrap.js"></script>
   <script type="text/javascript" src="../bower_components/jquery-color/jquery.color.js"></script>
   <script type="text/javascript" src="../javascripts/jquery.typingSkillTraining.js"></script>
   <script type="text/javascript" src="js/sandbox.js"></script>
