--- a/.index_old.html
+++ b/.index_old.html
@@ -35,7 +35,7 @@
           <br>
           <br>
           <h3>
-            <div class="typingSkillTraining-logo">KONAMI CODE</div>
+            <div class="typingSkillTraining-logo">Sandbox CODE</div>
             <div class="keysPressed"></div>
             <div class="description">Start pressing your keys now...</div>
             <div class="record"></div>
@@ -71,12 +71,12 @@
   <script type="text/javascript" src="javascripts/jquery.typingSkillTraining.js"></script>
   <!--<script type="text/javascript" src="javascripts/index.js"></script>-->
 
-  <script type="text/javascript" src="javascripts/konami/konami.js"></script>
-  <script type="text/javascript" src="javascripts/konami/konami.target.js"></script>
-  <script type="text/javascript" src="javascripts/konami/konami.typingComponent.js"></script>
-  <script type="text/javascript" src="javascripts/konami/konami.loading.js"></script>
-  <script type="text/javascript" src="javascripts/konami/konami.container.js"></script>
-  <script type="text/javascript" src="javascripts/konami/konami.boot.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.target.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.typingComponent.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.loading.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.container.js"></script>
+  <script type="text/javascript" src="javascripts/Sandbox/Sandbox.boot.js"></script>
 
   </body>
 </html>
