--- a/javascripts/specs/SpecRunner.html
+++ b/javascripts/specs/SpecRunner.html
@@ -15,7 +15,9 @@
 
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="specHelper.js"></script>
   <script type="text/javascript" src="jquery.typingSkillTraining.spec.js"></script>
+  <script type="text/javascript" src="jquery.typingSkillTraining.panel.spec.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../jquery.typingSkillTraining.js"></script>
