--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -38,6 +38,10 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-12 panel">
+      </div>
+    </div>
 
     <h3>event log:</h3>
     <div class="row">
