--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-lg-12 panel">
+        <ul>
+          <li class="lastTimeSpan"></li>
+        </ul>
+      </div>
+    </div>
+
+
     <h3>event log:</h3>
     <div class="row">
       <div class="col-lg-2">
@@ -71,6 +80,7 @@
   <script type="text/javascript" src="js/sandbox/sandbox.loading.js"></script>
   <script type="text/javascript" src="js/sandbox/sandbox.target.js"></script>
   <script type="text/javascript" src="js/sandbox/sandbox.container.js"></script>
+  <script type="text/javascript" src="js/sandbox/sandbox.panel.js"></script>
   <script type="text/javascript" src="js/sandbox/sandbox.typing_component.js"></script>
 
   </body>
